[INFER] Use type barrier for values produced by class getProperty hooks, bug 655938.