js/src/jsobj.cpp
@@ -5699,6 +5699,10 @@ js_GetPropertyHelperWithShapeInline(JSContext *cx, JSObject *obj, JSObject *rece
 
         PCMETER(getHow & JSGET_CACHE_RESULT && JS_PROPERTY_CACHE(cx).nofills++);
 
+        /* Record non-undefined values produced by the class getter hook. */
+        if (!vp->isUndefined())
+            cx->addTypePropertyId(obj->getType(), id, *vp);
+
         /*
          * Give a strict warning if foo.bar is evaluated by a script for an
          * object foo with no property named 'bar'.
